[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/HUD/uibody.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/HP.png" type="Texture" id=3]
[ext_resource path="res://assets/HUD/Toxicity.png" type="Texture" id=4]
[ext_resource path="res://assets/HUD/Immunity.png" type="Texture" id=5]
[ext_resource path="res://assets/HUD/Hunger.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/Thirst.png" type="Texture" id=7]
[ext_resource path="res://assets/HUD/Happy.png" type="Texture" id=8]
[ext_resource path="res://assets/HUD/Tired.png" type="Texture" id=9]

[node name="MarginContainer" type="MarginContainer"]
margin_right = 150.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 20 )
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color( 1, 1, 1, 0.576471 )
margin_right = 150.0
margin_bottom = 166.0
texture = ExtResource( 2 )
region_rect = Rect2( 4, 33, 501, 356 )

[node name="Lines" type="VBoxContainer" parent="."]
margin_right = 150.0
margin_bottom = 166.0
alignment = 1

[node name="HP" type="VBoxContainer" parent="Lines"]
editor/display_folded = true
margin_top = 13.0
margin_right = 150.0
margin_bottom = 45.0
alignment = 1

[node name="HPline" type="HBoxContainer" parent="Lines/HP"]
margin_right = 150.0
margin_bottom = 32.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Lines/HP/HPline"]
margin_left = 48.0
margin_right = 73.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="HP_label" type="Label" parent="Lines/HP/HPline"]
margin_left = 77.0
margin_right = 101.0
margin_bottom = 31.0
text = "100
"

[node name="Tox_Imm" type="VBoxContainer" parent="Lines"]
editor/display_folded = true
margin_top = 49.0
margin_right = 150.0
margin_bottom = 81.0

[node name="HPline2" type="HBoxContainer" parent="Lines/Tox_Imm"]
editor/display_folded = true
margin_right = 150.0
margin_bottom = 32.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Lines/Tox_Imm/HPline2"]
margin_left = 14.0
margin_right = 46.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Tox_label" type="Label" parent="Lines/Tox_Imm/HPline2"]
margin_left = 50.0
margin_right = 74.0
margin_bottom = 31.0
text = "100
"
align = 1
valign = 1

[node name="HPline3" type="HBoxContainer" parent="Lines/Tox_Imm/HPline2"]
margin_left = 78.0
margin_right = 136.0
margin_bottom = 32.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Lines/Tox_Imm/HPline2/HPline3"]
margin_right = 30.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="Imm_label" type="Label" parent="Lines/Tox_Imm/HPline2/HPline3"]
margin_left = 34.0
margin_right = 58.0
margin_bottom = 31.0
text = "100
"

[node name="Hun_Thi" type="VBoxContainer" parent="Lines"]
editor/display_folded = true
margin_top = 85.0
margin_right = 150.0
margin_bottom = 116.0

[node name="Hun" type="HBoxContainer" parent="Lines/Hun_Thi"]
margin_right = 150.0
margin_bottom = 31.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Lines/Hun_Thi/Hun"]
margin_left = 19.0
margin_right = 49.0
margin_bottom = 31.0
texture = ExtResource( 6 )

[node name="Hun_label" type="Label" parent="Lines/Hun_Thi/Hun"]
margin_left = 53.0
margin_right = 77.0
margin_bottom = 31.0
text = "100
"

[node name="Thi" type="HBoxContainer" parent="Lines/Hun_Thi/Hun"]
margin_left = 81.0
margin_right = 130.0
margin_bottom = 31.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Lines/Hun_Thi/Hun/Thi"]
margin_right = 21.0
margin_bottom = 31.0
texture = ExtResource( 7 )

[node name="Thi_label" type="Label" parent="Lines/Hun_Thi/Hun/Thi"]
margin_left = 25.0
margin_right = 49.0
margin_bottom = 31.0
text = "100
"

[node name="Hap_Tir" type="VBoxContainer" parent="Lines"]
editor/display_folded = true
margin_top = 120.0
margin_right = 150.0
margin_bottom = 152.0

[node name="Hap" type="HBoxContainer" parent="Lines/Hap_Tir"]
editor/display_folded = true
margin_right = 150.0
margin_bottom = 32.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Lines/Hap_Tir/Hap"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 32.0
texture = ExtResource( 8 )

[node name="Hap_Label" type="Label" parent="Lines/Hap_Tir/Hap"]
margin_left = 52.0
margin_right = 76.0
margin_bottom = 31.0
text = "100
"

[node name="Tir" type="HBoxContainer" parent="Lines/Hap_Tir/Hap"]
editor/display_folded = true
margin_left = 80.0
margin_right = 134.0
margin_bottom = 32.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Lines/Hap_Tir/Hap/Tir"]
margin_right = 26.0
margin_bottom = 32.0
texture = ExtResource( 9 )

[node name="Tir_Label" type="Label" parent="Lines/Hap_Tir/Hap/Tir"]
margin_left = 30.0
margin_right = 54.0
margin_bottom = 31.0
text = "100
"
